force-app/main/default/objects/WorkOrderLineItem/fields/CanceledOn__c.field-meta.xml
<CustomField>
    <fullName>CanceledOn__c</fullName>
    <label>Canceled On</label>
    <type>DateTime</type>
</CustomField>