force-app/main/default/objects/WorkOrderLineItem/fields/ColorOption__c.field-meta.xml
<CustomField>
    <fullName>ColorOption__c</fullName>
    <label>Color Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ColorOption</valueSetName>
    </valueSet>
</CustomField>