force-app/main/default/objects/WorkOrderLineItem/fields/CompletedBy__c.field-meta.xml
<CustomField>
    <fullName>CompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipName>CompletedWorkOrderSteps</relationshipName>
    <type>Lookup</type>
</CustomField>