force-app/main/default/objects/WorkOrderLineItem/fields/CompletedOn__c.field-meta.xml
<CustomField>
    <fullName>CompletedOn__c</fullName>
    <label>Completed On</label>
    <type>DateTime</type>
</CustomField>