force-app/main/default/objects/WorkOrderLineItem/fields/Cutting_Machine__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Machine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cutting Machine</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Cutting: Work Order Line Items</relationshipLabel>
    <relationshipName>Cutting_Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>