force-app/main/default/objects/WorkOrderLineItem/fields/IconName__c.field-meta.xml
<CustomField>
    <fullName>IconName__c</fullName>
    <label>Icon Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>utility:activity</fullName>
            </value>
            <value>
                <fullName>utility:ad_set</fullName>
            </value>
            <value>
                <fullName>utility:add</fullName>
            </value>
            <value>
                <fullName>utility:adduser</fullName>
            </value>
            <value>
                <fullName>utility:adjust_value</fullName>
            </value>
            <value>
                <fullName>utility:advanced_function</fullName>
            </value>
            <value>
                <fullName>utility:advertising</fullName>
            </value>
            <value>
                <fullName>utility:agent_home</fullName>
            </value>
            <value>
                <fullName>utility:agent_session</fullName>
            </value>
            <value>
                <fullName>utility:aggregation_policy</fullName>
            </value>
            <value>
                <fullName>utility:alert</fullName>
            </value>
            <value>
                <fullName>utility:all</fullName>
            </value>
            <value>
                <fullName>utility:anchor</fullName>
            </value>
            <value>
                <fullName>utility:animal_and_nature</fullName>
            </value>
            <value>
                <fullName>utility:announcement</fullName>
            </value>
            <value>
                <fullName>utility:answer</fullName>
            </value>
            <value>
                <fullName>utility:answered_twice</fullName>
            </value>
            <value>
                <fullName>utility:anywhere_alert</fullName>
            </value>
            <value>
                <fullName>utility:anywhere_chat</fullName>
            </value>
            <value>
                <fullName>utility:apex_plugin</fullName>
            </value>
            <value>
                <fullName>utility:apex</fullName>
            </value>
            <value>
                <fullName>utility:approval</fullName>
            </value>
            <value>
                <fullName>utility:apps</fullName>
            </value>
            <value>
                <fullName>utility:archive</fullName>
            </value>
            <value>
                <fullName>utility:arrow_bottom</fullName>
            </value>
            <value>
                <fullName>utility:arrow_left</fullName>
            </value>
            <value>
                <fullName>utility:arrow_right</fullName>
            </value>
            <value>
                <fullName>utility:arrow_top</fullName>
            </value>
            <value>
                <fullName>utility:arrowdown</fullName>
            </value>
            <value>
                <fullName>utility:arrowup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>