force-app/main/default/objects/WorkOrderLineItem/fields/Lamination__c.field-meta.xml
<CustomField>
    <fullName>Lamination__c</fullName>
    <label>Lamination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lamination</valueSetName>
    </valueSet>
</CustomField>