force-app/main/default/objects/WorkOrderLineItem/fields/Lamination_Type__c.field-meta.xml
<CustomField>
    <fullName>Lamination_Type__c</fullName>
    <label>Lamination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>Gloss</fullName>
            </value>
            <value>
                <fullName>Matte</fullName>
            </value>
            <value>
                <fullName>Mounting Film</fullName>
            </value>
            <value>
                <fullName>Optically Clear</fullName>
            </value>
            <value>
                <fullName>Removable</fullName>
            </value>
            <value>
                <fullName>Semigloss</fullName>
            </value>
            <value>
                <fullName>Silk</fullName>
            </value>
            <value>
                <fullName>White Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>