force-app/main/default/objects/WorkOrderLineItem/fields/Machine__c.field-meta.xml
<CustomField>
    <fullName>Machine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machine</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>