force-app/main/default/objects/WorkOrderLineItem/fields/OnHoldBy__c.field-meta.xml
<CustomField>
    <fullName>OnHoldBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On Hold By</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipName>OnHoldWorkOrderSteps</relationshipName>
    <type>Lookup</type>
</CustomField>