force-app/main/default/objects/WorkOrderLineItem/fields/OperationsDetails__c.field-meta.xml
<CustomField>
    <fullName>OperationsDetails__c</fullName>
    <label>Operations Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OperationsDetails</valueSetName>
    </valueSet>
</CustomField>