force-app/main/default/objects/WorkOrderLineItem/fields/Printing_Machine__c.field-meta.xml
<CustomField>
    <fullName>Printing_Machine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Printing Machine</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Printing: Work Order Line Items</relationshipLabel>
    <relationshipName>Printing_Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>