force-app/main/default/objects/WorkOrderLineItem/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <label>Specifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>