force-app/main/default/objects/WorkOrderLineItem/fields/StartedBy__c.field-meta.xml
<CustomField>
    <fullName>StartedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Started By</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipName>StartedWorkOrderSteps</relationshipName>
    <type>Lookup</type>
</CustomField>