force-app/main/default/objects/WorkOrderLineItem/fields/StartedOn__c.field-meta.xml
<CustomField>
    <fullName>StartedOn__c</fullName>
    <label>Started On</label>
    <type>DateTime</type>
</CustomField>